# cookiecutter-python-monorepo-template

./: .gitignore  LICENSE  README.md  cookiecutter.json
.github/workflows/: test.yml
hooks/: post_gen_project.py
templates/: justfile
{{cookiecutter.project_slug}}/: .gitignore  README.md  justfile  pyproject.toml
{{cookiecutter.project_slug}}/libs/shared/: pyproject.toml
{{cookiecutter.project_slug}}/libs/utils/: pyproject.toml
{{cookiecutter.project_slug}}/tools/: __init__.py
