[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = []

[tool.uv.workspace]
members = []

[dependency-groups]
dev = [
    "rust-just>=1.38.0",
]

[tool.ruff]
exclude = [
    "justfile",
    ".venv",
    "__pycache__",
    ".git",
]

line-length = 88
indent-width = 4
target-version = "py{{ cookiecutter.python_version.replace('.', '') }}"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = ["ISC001"]
